# wyoming-higgs

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-sglang-omni.txt  requirements-sglang-overrides.txt  requirements-stack.txt
docs/superpowers/plans/: 2026-06-15-wyoming-higgs.md
docs/superpowers/specs/: 2026-06-15-wyoming-higgs-design.md
examples/voice-presets/: config.json
script/: run  run_stack  setup_stack  test
tests/: test_client.py  test_handler.py  test_main.py  test_stack_startup.py  test_voices.py
wyoming_higgs/: __init__.py  __main__.py  client.py  handler.py  voices.py
